lab2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab2-service
spec:
  selector:
    app: lab2
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
