lab2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab2-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lab2-service
            port:
              number: 80
